--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.8.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-helmet": "^6.1.0",
     "react-toastify": "^11.0.5",
     "reactive-button": "^1.3.15",
     "tailwindcss": "^4.0.13"
